[tool.poetry]
name = "starbucks problem"
version = "0.1.0"
description = ""
authors = ["HasanVerses <135659832+HasanVerses@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyomo = "^6.7.0"
matplotlib = "^3.8.2"
networkx = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
